--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 *
 {
     padding: 0;
@@ -5,6 +6,7 @@
     box-sizing: border-box;
     background-color: #2C2F33;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
 }
 
 .headerTitle 
