--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,11 @@
 
 .discord_id 
     {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
+    overflow: hidden; 
+    border-right: .15em solid orange; 
+    white-space: nowrap; 
+    margin: 0 auto; 
+    letter-spacing: .15em; 
     animation: 
       typing 3.5s steps(40, end),
       blink-caret .75s step-end infinite;
@@ -34,13 +34,11 @@
     max-width: 30rem;
   }
   
-  /* The typing effect */
   @keyframes discord_id {
     from { width: 0 }
     to { width: 100% }
   }
   
-  /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: #7289DA; }
